# Docker-RosWS

./: .gitignore  README.md
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile
src/: README.md  command.txtt
src/bringup/: package.xml  setup.py
src/bringup/launch/: system.launch.py
src/my_robot_base/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/my_robot_base/config/: base_config.yaml
src/my_robot_base/launch/: base_launch.py
src/my_robot_bringup/: CMakeLists.txt  README.md  package.xml
src/my_robot_bringup/launch/: real_bringup.launch.py  sim_bringup.launch.py
src/my_robot_description/: CMakeLists.txt  README.md  my_robot_description.xml  package.xml
src/my_robot_description/config/: controllers.yaml
src/my_robot_description/hardware/: diffbot_system.cpp
src/my_robot_description/hardware/include/my_robot_description/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
src/my_robot_description/launch/: diffdrive_physical.launch.py  rsp.launch.py
src/my_robot_description/xacro/: camera.xacro  gazebo_control.xacro  gps.xacro  imu.xacro  lidar.xacro  lidar_3d.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/my_robot_gazebo/: CMakeLists.txt  README.md  package.xml
src/my_robot_gazebo/config/: controllers .yaml  controllers.yaml
src/my_robot_gazebo/launch/: gazebo.launch.py
src/my_robot_gazebo/models/: .gitkeep
src/my_robot_gazebo/scripts/: spawn_actors.py
src/my_robot_igvc_mission/: README.md  package.xml  setup.cfg  setup.py
src/my_robot_igvc_mission/config/: mission_config.yaml
src/my_robot_igvc_mission/launch/: mission_launch.py
src/my_robot_lane_detection/src/YOLOP/toolkits/deploy/: CMakeLists.txt  yololayer.cu  yololayer.h  yolov5.hpp
src/my_robot_lane_detection/src/yolop_lane_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_robot_lane_detection/src/yolop_lane_ros2/msg/: LaneData.msg
src/my_robot_lane_detection/src/yolop_lane_ros2/yolop_lane_ros2/: video_pub.py  yolop_lane_node.py
src/my_robot_lane_detection/tests/: test_lane_functions.py
src/my_robot_localization/: README.md  package.xml  setup.py
src/my_robot_localization/config/: ekf_config.yaml
src/my_robot_localization/launch/: gps_localization_launch.py
src/my_robot_navigation/: CMakeLists.txt  README.md  package.xml
src/my_robot_navigation/config/: nav2_params.yaml
src/my_robot_navigation/launch/: nav2.launch.py
src/my_robot_perception/: 192.168.1-metadata.json  README.md  fusion_visualization.rviz  os-992209000435-metadata.json  package.xml  setup.cfg  setup.py
src/my_robot_perception/lidar-launch/: lidar-launch.bash  lidar-route.py
src/my_robot_perception/my_robot_perception/nodes/: vision_detector_node.py
src/my_robot_perception/src/: frames.gv  frames_2026-01-28_13.10.37.gv  os-992209000435-metadata.json
src/my_robot_perception/src copy/camera_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_robot_perception/src copy/camera_perception/camera_perception/: camera_perception_node.py
src/my_robot_perception/src copy/camera_perception/config/: camera_perception.yaml  rviz_camera.rviz
src/my_robot_perception/src copy/camera_perception/launch/: camera_perception.launch.py  zed_rviz.launch.py
src/my_robot_perception/src copy/fusion_msgs/: CMakeLists.txt  package.xml
src/my_robot_perception/src copy/fusion_msgs/msg/: AssociationDebug.msg  EnrichedCluster.msg
src/my_robot_perception/src copy/fusion_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_robot_perception/src copy/fusion_node/config/: fusion_node.yaml
src/my_robot_perception/src copy/fusion_node/fusion_node/: fusion_node.py
src/my_robot_perception/src copy/fusion_node/launch/: fusion_node.launch.py
src/my_robot_perception/src copy/lidar_perception/: CMakeLists.txt  lidar.txt  package.xml
src/my_robot_perception/src copy/lidar_perception/config/: lidar_perception.yaml  rviz_lidar.rviz
src/my_robot_perception/src copy/lidar_perception/launch/: lidar_perception.launch.py  ouster_rviz.launch.py
src/my_robot_perception/src copy/lidar_perception/src/: lidar_perception_node.cpp
src/my_robot_perception/src copy/wheeled_robot/notes/: notes.txt
src/my_robot_perception/src/camera_gated_clustering/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  build_fusion.sh  package.xml  setup.cfg  setup.py
src/my_robot_perception/src/camera_gated_clustering/camera_gated_clustering/: __init__.py  camera_gated_clustering_node.py  cluster_association.py  gating_strategies.py  lidar_camera_fusion_node.py  projection.py  projection_utils.py  visualization.py
src/my_robot_perception/src/camera_gated_clustering/config/: camera_lidar_calibration.yaml  fastdds_no_shm.xml  fusion_params.yaml  sensor_fusion.rviz  sensor_fusion_clean.rviz
src/my_robot_perception/src/camera_gated_clustering/docs/: CALIBRATION_GUIDE.md  repo_discovery.md
src/my_robot_perception/src/camera_gated_clustering/launch/: lidar_camera_fusion.launch.py  sensor_fusion_full.launch.py
src/my_robot_perception/src/camera_gated_clustering/resource/: camera_gated_clustering
src/my_robot_perception/src/camera_gated_clustering/src/: pcl_euclidean_clustering_node.cpp
src/my_robot_perception/src/camera_gated_clustering/test/: test_projection.py
src/my_robot_perception/src/fusion_msgs/msg/: EnrichedClusterArray.msg
src/my_robot_perception/src/wheeled_robot/: CMakeLists.txt  package.xml  setup.py
src/my_robot_perception/src/wheeled_robot/config/: gz_bridge.yaml  waypoints.yaml
src/my_robot_perception/src/wheeled_robot/launch/: diff_drive_launch.py  robot_launch.py
src/my_robot_perception/src/wheeled_robot/notes/: notes.txt
src/my_robot_perception/src/wheeled_robot/urdf/: robot.xacro
src/my_robot_perception/src/wheeled_robot/worlds/: empty.sdf
src/my_robot_teleop/: README.md  package.xml  setup.cfg  setup.py
src/tools/heartbeat/: package.xml  setup.py
src/tools/heartbeat/heartbeat/: node.py
src/tools/heartbeat/scripts/: heartbeat
(+11 files in other folders)
