<?xml version="1.0"?>
<package format="3">
  <name>heartbeat</name>
  <version>0.0.1</version>
  <description>Minimal node used to validate workspace build and bringup launch.</description>

  <maintainer email="you@yourcompany.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
