<package format="3">
  <name>camera_perception</name>
  <version>0.0.1</version>
  <description>Camera perception node (2D detections from images), extracted from camera_gated_clustering.
  </description>
  <maintainer email="todo@example.com">TODO_MAINTAINER</maintainer>
  <license>TODO_LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-vision-msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
