<package format="3">
  <name>lidar_perception</name>
  <version>0.0.1</version>
  <description>LiDAR perception node (clustering + 3D detections) extracted from camera_gated_clustering.</description>
  <maintainer email="todo@example.com">TODO_MAINTAINER</maintainer>
  <license>TODO_LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
