<?xml version="1.0"?>
<package format="3">
  <name>wheeled_robot</name>
  <version>0.0.1</version>
  <description>Differential drive robot for Gazebo Fortress + ROS 2 Humble</description>
  <maintainer email="Graham.rais@wmich.edu">Graham</maintainer> 
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>